--- a/layout1.css
+++ b/layout1.css
@@ -1,36 +1,44 @@
-.row .logo{
-    height: 10%;
-    width: 7%;
-    top: 0;
+/*Header Start*/
+header{
     
-    position: absolute;
-    right: 40%;
-    left: 40%;
-    
-    
-    
-
 }
+.logo  img{
+    height: 350%;
+    width: 200%;
+}
+ .logo {
+    height: 2%;
+    width: 2%;
+    position: absolute;
+    top: 0;
+    right: 35%;
+    left: 35%;
+    text-align: center;
+}
+
 
 .fst-img{
-    position: relative;
-    align-items: center;
-    height: 100%;
-    width: 90%;
-    margin-left: 40%;
-    margin-right: 40%;
-    
-    
-}
-.heading{
 
+    
+    height: 80%;
+    width:80%;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 0 0 40px 40px;
+    
+    
 }
-.Medical_clinic{
-    align-items: center;
+
+.Medical_clinic h1{
+    position: absolute;
     background-color: dodgerblue;
     color: white;
-   
-  
+    text-align: center;
+    padding: 0 20px 0  20px;
+    bottom: 0;
+    
+    right: 35%;
+    left: 35%;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
 }
@@ -39,19 +47,21 @@
     color: white;
 
 }
+/*header End*/
+/*Section Start*/
 section{
     padding: 20px;
-    margin-top: 20px;
+    margin-top: 120px;
 }
 .about h5{
     color: #036DB9;
     padding-right: 30px;
-    padding-top: 50%;
+    padding-top: 60%;
 }
 .us{
     font-weight: bold;
     color: #036DB9;
-    
+    padding-left: 20%;
     
     font-size: 60px;
 
@@ -72,9 +82,36 @@ section{
     color: gray;    
 }
 .tfh_line{
-    background-color: black;
+    background-color: #036DB9;
+    margin: 10px;
+    padding-right: 10%;
+}
+.tfh img,.mobile img,.covid img{
+    width: 50%;
+    border-radius: 20px;
+    padding-bottom: 20%;
+   padding-left: 5%;
+   align-items: center;
+   margin-left: 18%;
+  
+}
+.tfh p,.mobile p,.covid p{
+    font-size: 80%;
+    color: #036DB9;
+    text-align: center;
+}
+.contact_us{
+    color: #036DB9;
+}
+.scanner img{
+    width: 2.5%;
     
 }
-.tfh,.mobile,.covid{
-    
+.socialmedia img{
+    width: 2.5%;
+    color: #036DB9; 
 }
+
+
+/*Section End*/
+
