--- a/layout1.css
+++ b/layout1.css
@@ -1,32 +1,33 @@
 /*Header Start*/
-header{
-    
-}
+
 .logo  img{
-    height: 350%;
-    width: 200%;
+    height: 45px;
+    width: 52px;
+    margin-left: 65%;
+    margin-top: 1.5 %;
+
 }
- .logo {
-    height: 2%;
-    width: 2%;
+.logo {
     position: absolute;
+    
     top: 0;
-    right: 35%;
-    left: 35%;
+    
     text-align: center;
 }
-
-
-.fst-img{
-
+.logo_content{
     
+    bottom: 0;
+    margin-left: -40%;
+    margin-top: 2%;
+
+}
+.fst-img{
+    position: relative;
     height: 80%;
     width:80%;
     margin-left: 30%;
     margin-right: 30%;
     border-radius: 0 0 40px 40px;
-    
-    
 }
 
 .Medical_clinic h1{
@@ -34,25 +35,27 @@ header{
     background-color: dodgerblue;
     color: white;
     text-align: center;
-    padding: 0 20px 0  20px;
-    bottom: 0;
-    
-    right: 35%;
-    left: 35%;
-    border-top-left-radius: 8px;
-    border-bottom-right-radius: 8px;
+    padding: 10px 20px 10px  20px;
+    bottom: 80;
+    right: 32%;
+    left: 32%;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 .Let_us{
+    position: absolute;
     background-color: #36cacf;
     color: white;
-
+    text-align: center;
+    padding: 0 10px 0  10px;
+    bottom: 65;
+    
+    right: 38%;
+    left: 38%;
 }
 /*header End*/
 /*Section Start*/
-section{
-    padding: 20px;
-    margin-top: 120px;
-}
+
 .about h5{
     color: #036DB9;
     padding-right: 30px;
@@ -111,7 +114,56 @@ section{
     width: 2.5%;
     color: #036DB9; 
 }
+.Services{
+  
+    margin-left: -10%;
+    
+}
+.Services .doctor_2 img{
+    height: 20%;
+    width: 35%;
+    background-color: #036DB9;
+    box-shadow: 10px 3px #036DB9;
+    border-radius: 0 0 20px 0 ;
+    margin-left: 60%;
+}
+.Over_Services{
+    
+    background-color: #036DB9;
+    padding: 20px;
+    border-radius: 40px 0 0 0 ;
+    color: white;
+    margin-left: 20%;
+}   
+.merge{
+    background-color: #36cacf;
+    color: white;
+    padding: 0 0 40px 0 ;
+    font-size: small;
+    
+    margin-left: 30%;
+}
 
+
+.Lorem p,h4{
+    text-align: right;
+    margin-top: 7%;
+    font-size: 90%;
+    
+}
+.scan img{
+   
+    background-color: #036DB9;
+    height: 18%;
+    width:30%;
+    
+    border: 1px solid;
+    padding: 10px;
+    margin-left: -20%;
+    
+    border-radius: 30px 0 30px 0;
+    
+}
 
 /*Section End*/
 
